src/test/deca/syntax/valid/valid_include.deca
// Description:
//          Inclusion d'un fichier valide
//
// Résultat:
//Succès
//
#include "hello.deca" 