src/test/deca/syntax/invalid/include_fauxfichier.deca
//  Description :
//            Inclusion d'un fichier inexistant
//
// Résultat:
//include file not found
//
#include "fichier_inexistant.deca"